--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>The Equinox</h1>
         <p>Neon Gear for Shadowrunners</p>
     </header>
-    <div id="items-container" class="grid"></div>
+    <div class="grid"></div>
     <script src="/script.js" defer></script>
 </body>
 </html>
