--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
         <p>Neon Gear for Shadowrunners</p>
     </header>
     <div id="items-container" class="grid"></div>
-    <script src="/script.js" defer></script>
+    <script src="/script.js" ></script>
 </body>
 </html>
